syntax = "proto3";

package multi_tenancy_package;

service MultiTenancy {
	rpc UserTenant(UserTenantRequest) returns (UserTenantResponse) {};
	
}

message UserTenantRequest {
	 int32 userId = 1;
	 int32 tenantId = 2;
} 
message UserTenantResponse {
	repeated int32 tenantIds = 1;
}